# Hexa.NET.DirectXTex

./: .gitignore  .gitmodules  CMakeLists.txt  DirectXTex.h  Hexa.NET.DirectXTex.sln  HexaEngine.DirectXTex.sln  LICENSE.txt  README.md
.github/workflows/: cmake-android.yml  cmake-debug.yml  cmake-directxtex.yml  tests.yml  win-cmake.yml
DirectXTex/: CMakeLists.txt  DirectXTex.cpp  DirectXTex.h
Example/: Example.csproj  Program.cs
Generator/: CodeWriter.cs  CsCodeGenerator.Commands.cs  CsCodeGenerator.Enum.cs  CsCodeGenerator.Extensions.cs  CsCodeGenerator.Handles.cs  CsCodeGenerator.Structs.cs  CsCodeGenerator.cs  CsCodeGeneratorSettings.cs  Generator.csproj  Program.cs  generator.json
Generator/DirectXTex/: DirectXTex.h
Hexa.NET.DirectXTex/: DirectXTex.cs  Hexa.NET.DirectXTex.csproj  ID3D12Resource.cs  LibraryLoader.cs
Hexa.NET.DirectXTex.Tests/: BlobMethods.cs  D3D11Exception.cs  DDSHelperFunctions.cs  DXGIFormatUtilities.cs  Direct3D11Functions.cs  Hexa.NET.DirectXTex.Tests.csproj  ImageIO.cs  MetadataIO.cs  MiscImageOperations.cs  NormalMapOperations.cs  ResultCode.cs  ScratchImageMethods.cs  TexMetadataMethods.cs  TextureUtils.cs  Usings.cs  Utils.cs  WICUtilities.cs
HexaEngine.DirectXTex/: DirectXTex.Structures.cs  DirectXTex.cs  Hexa.NET.DirectXTex.csproj  HexaEngine.DirectXTex.csproj  Native.cs
HexaEngine.DirectXTex.Tests/: BlobMethods.cs  D3D11Exception.cs  DDSHelperFunctions.cs  DXGIFormatUtilities.cs  Direct3D11Functions.cs  Hexa.NET.DirectXTex.Tests.csproj  HexaEngine.DirectXTex.Tests.csproj  ImageIO.cs  MetadataIO.cs  MiscImageOperations.cs  NormalMapOperations.cs  ResultCode.cs  ScratchImageMethods.cs  TexMetadataMethods.cs  TextureUtils.cs  Usings.cs  Utils.cs  WICUtilities.cs
HexaGen/: BaseGenerator.cs  CsCodeGenerator.Constants.cs  CsCodeGenerator.Delegates.cs  CsCodeGenerator.Enum.cs  CsCodeGenerator.Extensions.cs  CsCodeGenerator.Functions.cs  CsCodeGenerator.Handles.cs  CsCodeGenerator.Types.cs  CsCodeGenerator.cs  CsCodeGeneratorSettings.cs  CsComCodeGenerator.Functions.cs  FormatHelper.cs  HexaGen.csproj  ImportType.cs  VTableBuilder.cs
HexaGen.Core/: CodeWriter.cs  CsCodeWriter.cs  CsSplitCodeWriter.cs  HexaGen.Core.csproj  IGeneratorSettings.cs
HexaGen.Core/CSharp/: CsType.cs
HexaGen.Language/: HexaGen.Language.csproj
HexaGen.Runtime/: HexaGen.Runtime.csproj
native/osx-x64/: libDirectXTex.dylib
